syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.example";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloStream (EmptyRequest) returns (stream HelloReply) {}
  }
  
  // The request message containing the user's name.
  message HelloRequest {
   string name = 1;
  }

  message EmptyRequest {  }
  
  // The response message containing the greetings
  message HelloReply {
    string message = 1;
  }